# simple_moe_pravite

./: README.md  pyproject.toml
examples/: cifar10_moe.py  compose_func.py  linear_regression_benchmark.py  mnist_moe.py
simple_moes/: __init__.py  debug.py  experts.py  gate.py  heads.py  losses.py  moes.py  tools.py  trains.py
